# HostForge

./: .env.example  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shared/: README.md
src/: App.tsx  Header.tsx  SideBar.tsx  navItems.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs  servercreation.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/state/: mod.rs
src/pages/: Backups.tsx  Dashboard.tsx  NewServer.tsx  ServerList.tsx  Settings.tsx  UsedPorts.tsx  importServer.tsx
src/pages/SetUpServer/: CreateServer.tsx  NewServer.tsx  getAllVersions.ts
src/styles/: createServerStylesheet.css  headerStylesheet.css  sidebarstylesheet.css
