[package]
name = "hostforge"
version = "0.1.0"
description = "Cross-platform Minecraft server management application"
authors = ["HostForge"]
edition = "2021"
rust-version = "1.77.2"

# The core logic lives in a library so it can be shared between the
# desktop binary and (later) mobile / integration test targets.
[lib]
name = "hostforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-opener = "2.5.4"
# rustls instead of native-tls so no OpenSSL toolchain is needed on Windows.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
tauri-plugin-http = "2.5.9"

[features]
# Enables Tauri's custom protocol for production asset serving.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
